# invest-brief

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.scheduler  README.md  config.example.json  design.pen  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run.py  run_web.py
.github/workflows/: docker-publish.yml  pr-check.yml
.playwright-cli/: page-2026-05-09T21-03-14-042Z.yml  page-2026-05-09T21-04-30-112Z.yml  page-2026-05-09T21-04-51-705Z.yml  page-2026-05-09T21-14-35-506Z.yml  page-2026-05-09T21-16-02-168Z.yml  page-2026-05-09T21-16-15-970Z.yml  page-2026-05-09T21-22-52-316Z.yml  page-2026-05-09T21-24-49-089Z.yml  page-2026-05-09T21-24-59-738Z.yml  page-2026-05-09T21-27-52-239Z.yml  page-2026-05-09T21-27-59-585Z.yml  page-2026-05-09T21-28-11-803Z.yml
doc/: 美股早报使用指南_中文版.docx  미국주식모닝브리프_사용가이드_한국어판.docx
docs/: kline-patterns-cheatsheet.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/.playwright-cli/: page-2026-05-09T21-11-14-995Z.yml  page-2026-05-09T21-11-27-367Z.yml  (+1 more)
investbrief/: __init__.py  config.py  report.py
lib/: __init__.py  api_clients.py  charts.py  data_provider.py  market.py  send_report.py  watchlists.py
nginx/: nginx.conf
scripts/: backfill_macro_data.py  build_industry_map.py  check_domain_boundary.py  preview_p4_risk.py  preview_picks.py
templates/: email_base.html  email_holdings.html
tests/: test_akshare_name.py  test_akshare_overseas.py  test_akshare_sina_fallback.py  test_akshare_throttle.py  test_cache_close_on_reinit.py  test_cache_path_sibling.py  test_cn_dividend.py  test_cn_provider_sentiment.py  test_config_enabled_markets.py  test_core_config.py  test_core_indicators.py  test_core_llm.py  test_core_llm_errors.py  test_core_llm_json.py  test_core_logging.py  test_core_ta.py  test_data_layer.py  test_datasources_akshare.py  test_datasources_import.py  test_em_ban.py  test_email_audit_batch_a.py  test_email_audit_batch_b.py  test_email_audit_batch_c.py  test_email_audit_batch_d.py  test_email_audit_followup.py  test_etf_analyzer.py  test_etf_engine.py  test_etf_index_mapping.py  test_etf_index_valuation.py  test_gold_valuation_render.py  test_holdings.py  test_holdings_brief.py  test_holdings_cache.py  test_holdings_cn_activity.py  test_holdings_dbfirst.py  test_holdings_events.py  test_holdings_fields.py  test_holdings_forecast.py  test_holdings_fund.py  test_holdings_insider.py  (+59 more)
(+197 files in other folders)
