[project]
name = "invest-brief"
version = "0.1.0"
description = "Personalized investment briefing via email"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=1.3.0",
    "requests>=2.32.0",
    "anthropic>=0.90.0",
    "python-dotenv>=1.0.0",
    "croniter>=6.0.0",
    "akshare>=1.18.0",
]

[project.scripts]
invest-brief = "run:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "network: tests that hit real external APIs (excluded from PR gate)",
]
