[project]
name = "invest-brief"
version = "0.1.0"
description = "Personalized investment briefing via email"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=1.3.0",
    "requests>=2.32.0",
    "anthropic>=0.90.0,<1.0",
    "python-dotenv>=1.0.0",
    "croniter>=6.0.0",
    "akshare>=1.18.0,<2.0",
    "jinja2>=3.1.0",
    "json-repair>=0.30.0",
    "pyyaml>=6.0",
    # 直接 import 的传递依赖需显式声明（PEP 621）：避免上游 akshare/yfinance 改动导致 ImportError
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.scripts]
invest-brief = "run:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.6.0",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "network: tests that hit real external APIs (excluded from PR gate)",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# 启用：致命错误(E9) + pyflakes(F，含 F401 未使用 import) + pyupgrade(UP)
select = ["E9", "F", "UP"]
